labs/03-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx-ingress
  namespace: minikube-demo
spec:
  type: ClusterIP
  selector:
    app: hello-nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
